--- a/java/基础.md
+++ b/java/基础.md
@@ -9,7 +9,7 @@
 
 #### JDK提供的工具
 
-Java编译器(javac.exe)；
+java编译器(javac.exe)；
 
 java执行器(java.exe)；
 
@@ -18,4 +18,72 @@ java执行器(java.exe)；
 java打包器(jar.exe)；
 
 java调试器(jdb.exe)
+
+javap 查看类的源码信息, 如 `javap Demo`查看Demo类的源码信息
+
+
+
+### java4类/8种数据基本类型
+
+1. **整数型** byte, short, int, long，它们分别占用1个字节，2个字节，4个字节，8个字节 
+
+   byte数值范围 `[-128（-2^7）~ 127(2^7 - 1)]`
+
+   short数值范围 `-32768（-2^15）~ 32767（2^15 - 1`
+
+   int数值范围 `-2,147,483,648（-2^31）~ 2,147,483,647（2^31 - 1）`
+
+   long数值范围 `-9,223,372,036,854,775,808（-2^63）~ 9,223,372,036,854,775,807（2^63 -1)`
+
+2. **浮点型** float, double；分别占4个字节和8个字节
+3. **逻辑型**; boolean
+4. **字符型**; char 占2个字节（不分中文英文）
+
+
+
+### 数组
+
+1. 增强的for循环
+
+   ```java
+   int[] datas = new int[10];
+   for (int value : datas) System.out.println(value)
+   ```
+
+2. 循环标记
+
+   ```java
+   int count = 10;
+   my_while:
+   while(count > 0) {
+     count--;
+     if (count < 3) continue my_while; // 小于3的不打印
+     System.out.println('count is ', count); 
+   }
+   ```
+
+   
+
+### 类
+
+1. 一个类可以有多个构造方法，构造方法里调用另外一个构造方法使用`this(参数1，参数2)`，且必须在构造方法的第一行调用。
+
+2. 类只能有一个父类，声明类的时候如果没有用extends继承某个父类，则该类默认继承`java.lang.Object`类。
+
+   所有的类都是通过直接或间接继承`java.lang.Object`类得到的。父类包括所有直接和间接被继承的类。
+
+3. **方法的覆盖**
+
+   子类可以声明和父类相同的方法名用来覆盖父类的方法行为。在jdk1.5后可以用`@Override标记来注解`
+
+   例如: 
+
+   ```java
+   @Override
+   public void sayHello() {System.out.println("hello")}
+   ```
+
+4. **方法的重载**
+
+   一个类可以有多个同名的方法，这被称为方法的重载，也可以重载父类的同名方法，与方法覆盖不同的是不要求参数类型和顺序必须和父类一致。
 
