--- a/java/基础.md
+++ b/java/基础.md
@@ -23,7 +23,7 @@ javap 查看类的源码信息, 如 `javap Demo`查看Demo类的源码信息
 
 
 
-### java4类/8种数据基本类型
+### java4类/9种数据基本类型
 
 1. **整数型** byte, short, int, long，它们分别占用1个字节，2个字节，4个字节，8个字节 
 
@@ -37,11 +37,38 @@ javap 查看类的源码信息, 如 `javap Demo`查看Demo类的源码信息
 
 2. **浮点型** float, double；分别占4个字节和8个字节
 3. **逻辑型**; boolean
-4. **字符型**; char 占2个字节（不分中文英文）
+4. **字符型**; char, String 占2个字节（不分中文英文）
+
+> 如果数字以(L|l)结尾则为长整型long，否则为int; 如果带小数点的数字以(F|f)结尾则为float浮点型，否则为double类型
+
+
+
+### 位运算
+
+位运算符包括逻辑与&、逻辑或|、逻辑异或^、取反~、左移<<、右移>>、>>>。其中比较常用的是取反、左移，右移。
+
+```java
+// 取反~的运算规则是原数字取反减一, 例如
+~5 // 结果-6; -5 - 1
+~-9 //结果8; 9 - 1
+  
+// 左移运算的规则是原数字乘以2的n次方, n是位移几位数，例如 5向左位移2位
+5 << 2 // 结果20； 5 * 2的2次方
+5 << 3 // 结果40; 5 * 8(2的3次方)
+  
+// 右移运算符的规则是原数字除以2的n次方
+20 >> 2 // 结果5; 20 / 4(2的2次方)
+```
+
+注意: 位运算只对整数部分进行操作
 
 
 
 ### 数组
+
+**创建数组** `new 类型 [长度]`; java中的数组元素类型是单一的，在创建的时候必须指定长度，创建后长度不可改变
+
+
 
 1. 增强的for循环
 
@@ -60,6 +87,27 @@ javap 查看类的源码信息, 如 `javap Demo`查看Demo类的源码信息
      if (count < 3) continue my_while; // 小于3的不打印
      System.out.println('count is ', count); 
    }
+   ```
+
+3. 声明并初始化数组
+
+   ```java
+   // 快捷语法，创建10个元素的数组并给每个元素初始化
+   int [] anArray = { 
+       100、200、300，
+       400、500、600， 
+       700、800、900、1000
+   };
+   ```
+
+#### 数组常见操作
+
+1. 复制数组
+
+   ```java
+   // System.arraycopy
+   // 这两个Object参数指定要从中复制的数组和要复制到的数组。这三个int参数指定源数组中的起始位置，目标数组中的起始位置以及要复制的数组元素的数量。
+   public static void arraycopy(Object src, int srcPos, Object dest, int destPos, int length)
    ```
 
    
@@ -86,4 +134,41 @@ javap 查看类的源码信息, 如 `javap Demo`查看Demo类的源码信息
 4. **方法的重载**
 
    一个类可以有多个同名的方法，这被称为方法的重载，也可以重载父类的同名方法，与方法覆盖不同的是不要求参数类型和顺序必须和父类一致。
+
+5. 类中的成员属性可以先声明后初始化，成员方法中的局部变量必须在声明时就初始化
+
+   
+
+#### 抽象方法
+
+抽象方法是被`abstract`关键字修饰的方法，它只能声明在抽象类中(被`abstract修饰的类`)，抽象类可以没有抽象方法也可以有多个抽象方法，抽象方法没有方法体，如`abstract int Count();`抽象方法由子类实现，如果子类没有实现那么它必须声明为抽象类。
+
+### 虚方法
+
+除了被private，static，final修饰的方法，其他方法都是虚方法调用，虚方法调用的时候跟实例有关，非虚方法和对象声明的类型有关，比如Shape类有个draw方法，Circle类也有draw方法，当Circle类的实例被声明为Shape类的时候，如果它的实例调用draw方法，实际上调用的是Shape类中的draw方法。**因此非虚方法也可以实现多态**
+
+```java
+// Shape类
+class Shape {
+    public static void draw() {
+        System.out.println("执行的是Shape类中的draw方法");
+    }
+}
+
+// Circle类
+class Circle extends Shape {
+    public static void main(String[] args) {
+        Shape s = new Circle();
+        s.draw();
+    }
+
+    public static void draw() {
+        System.out.println("执行Circle类中的draw方法");
+    }
+}
+
+// 执行Circle类打印的是 "执行的是Shape类中的draw方法"
+```
+
+
 
