--- a/java/基础.md
+++ b/java/基础.md
@@ -23,7 +23,7 @@ javap 查看类的源码信息, 如 `javap Demo`查看Demo类的源码信息
 
 
 
-### java4类/9种数据基本类型
+### java4类/8种基本数据类型
 
 1. **整数型** byte, short, int, long，它们分别占用1个字节，2个字节，4个字节，8个字节 
 
@@ -37,15 +37,46 @@ javap 查看类的源码信息, 如 `javap Demo`查看Demo类的源码信息
 
 2. **浮点型** float, double；分别占4个字节和8个字节
 3. **逻辑型**; boolean
-4. **字符型**; char, String 占2个字节（不分中文英文）
+4. **字符型**; char 占2个字节（不分中文英文）
 
 > 如果数字以(L|l)结尾则为长整型long，否则为int; 如果带小数点的数字以(F|f)结尾则为float浮点型，否则为double类型
+
+**能作为数据类型的除了8中原始数据类型还有`String`、`枚举类型`、`类`、`接口`** 
+
+
+
+### 类型转换
+
+基本类型转换通常是通过调用方法完成，如:
+
+```java
+String strNum = "3.14";
+Double num = Double.parseDouble(strNum);
+```
+
+**对象类型转换**
+
+对象类型的转换可以隐士转换和显示转换(强制转换)，子类类型可以隐士转换为父类类型，父类类型不能隐士转换为子类类型，否则编译器会报错。父类类型只能显示转换为子类类型。如:
+
+```java
+// 隐士转换
+Parent p = new Son();
+
+// 显示转换
+Son s = (Son)p;
+
+// 注意，如果p对象实际上不上Son的实例，虽然强制转换成了Son类型避免了编译器报错，但会导致运行时报错。
+// 更好的做法是通过instanceof判断一下， 如:
+if (p instanceof Son) {
+  Son s = (Son)p;
+}
+```
 
 
 
 ### 位运算
 
-位运算符包括逻辑与&、逻辑或|、逻辑异或^、取反~、左移<<、右移>>、>>>。其中比较常用的是取反、左移，右移。
+位运算符包括逻辑与&、逻辑或|、逻辑异或^、取反~、左移<<、右移>>和无符号右移>>>。其中比较常用的是取反、左移，右移。
 
 ```java
 // 取反~的运算规则是原数字取反减一, 例如
@@ -114,7 +145,9 @@ javap 查看类的源码信息, 如 `javap Demo`查看Demo类的源码信息
 
 ### 类
 
-1. 一个类可以有多个构造方法，构造方法里调用另外一个构造方法使用`this(参数1，参数2)`，且必须在构造方法的第一行调用。
+一个源文件只能有一个public类，但可以有多个其他非public的类，源文件名称必须和public类目一致。
+
+1. 一个类可以有多个构造方法，构造方法里调用另外一个构造方法使用`this(参数1，参数2)`，且必须在构造方法的第一行调用。构造方法没有返回类型，可以有访问修饰符。**注意：** 如果另一个类不能调用`MyClass`构造函数，则它不能直接创建`MyClass`对象。
 
 2. 类只能有一个父类，声明类的时候如果没有用extends继承某个父类，则该类默认继承`java.lang.Object`类。
 
@@ -135,9 +168,208 @@ javap 查看类的源码信息, 如 `javap Demo`查看Demo类的源码信息
 
    一个类可以有多个同名的方法，这被称为方法的重载，也可以重载父类的同名方法，与方法覆盖不同的是不要求参数类型和顺序必须和父类一致。
 
-5. 类中的成员属性可以先声明后初始化，成员方法中的局部变量必须在声明时就初始化
+5. **方法的隐藏**  
+
+   如果子类定义的静态方法与超类中的静态方法具有相同的签名，则子类中的方法会将其*隐藏*在超类中。
+
+   隐藏静态方法和覆盖实例方法之间的区别具有重要意义：
+
+   - 被调用的重写实例方法的版本是子类中的版本。
+   - 被调用的隐藏静态方法的版本取决于是从超类还是从子类调用。
+
+   ```java
+   public class Animal {
+       public static void testClassMethod() {
+           System.out.println("The static method in Animal");
+       }
+       public void testInstanceMethod() {
+           System.out.println("The instance method in Animal");
+       }
+   }
+   
+   public class Cat extends Animal {
+       public static void testClassMethod() {
+           System.out.println("The static method in Cat");
+       }
+       public void testInstanceMethod() {
+           System.out.println("The instance method in Cat");
+       }
+   
+       public static void main(String[] args) {
+           Cat myCat = new Cat();
+           Animal myAnimal = myCat;
+           Animal.testClassMethod();
+           myAnimal.testInstanceMethod();
+       }
+   }
+   
+   // 运行Cat类 打印
+   // The static method in Animal
+   // The instance method in Cat
+   
+   ```
 
    
+
+6. 类中的成员属性可以先声明后初始化，成员方法中的局部变量必须在声明时就初始化
+
+   ****
+
+#### 类的访问权限
+
+![image-20200430232246821](/Users/wuhan/Library/Application Support/typora-user-images/image-20200430232246821.png)
+
+**注意**: 类方法可以直接访问类变量和类方法。类方法**不能直接**访问实例变量或实例方法，它们必须使用对象引用。
+
+### 初始化成员属性
+
+```java
+1. // 初始化类变量；可以创建一个私有的静态方法用来初始化静态属性
+ class Whatever {
+    public static varType myVar = initializeClassVariable();
+        
+    private static varType initializeClassVariable() {
+
+        // initialization code goes here
+    }
+}
+
+2. // 初始化实例变量; 可以创建一个受保护的最终方法
+  // 如果子类可能想重用初始化方法，则这特别有用。
+  class Whatever {
+    private varType myVar = initializeInstanceVariable();
+        
+    protected final varType initializeInstanceVariable() {
+
+        // initialization code goes here
+    }
+}
+  
+```
+
+
+
+### 嵌套类
+
+在一个类中定义另一个类称为嵌套类。 嵌套类分为两类：静态和非静态。声明`static`的*嵌套类*称为*静态嵌套类*。非静态嵌套类称为*内部类*。
+
+非静态嵌套类（内部类）可以访问外部类的其他成员，即使它们被声明为私有的也是如此。静态嵌套类无权访问外部类的其他非静态成员。
+
+为静态嵌套类创建一个对象，使用如下语法:
+
+```java
+OuterClass.StaticNestedClass nestedObject = 
+     new OuterClass.StaticNestedClass();
+```
+
+**嵌套类其实是一种外部类，内部类里不能声明接口，而嵌套类可以**
+
+### 内部类
+
+要实例化内部类，必须首先实例化外部类。然后，使用以下语法在外部对象内创建内部对象：
+
+```java
+OuterClass externalObject = new OuterClass();
+OuterClass.InnerClass innerObject = externalObject.new InnerClass（）;
+```
+
+一个完整的demo，如下
+
+```java
+class OutterClass {
+    private String s = "外部类的属性";
+    int n = 10;
+
+    public static void main(String[] args) {
+        OutterClass outter = new OutterClass();
+        InnerClass inner = outter.new InnerClass();
+        inner.echoOutterProps(100);
+    }
+
+    class InnerClass {
+        int n = 12;
+
+        void echoOutterProps(int n) {
+            System.out.println(s); // 输出 外部类的属性
+            System.out.println(n); // 输出 100
+            System.out.println(this.n); // 输出 12
+            System.out.println(OutterClass.this.n); // 输出 10
+        }
+    }
+}
+```
+
+
+
+**两种特殊的内部类之局部类和匿名类**
+
+**局部类**是在方法中定义的类。局部类可以访问外部方法中的参数和被定义为final的局部变量。从java se8开始，也可以访问实际上是final的局部变量，就是说如果一个非final的变量初始化之后到方法运行结束没有改变过。
+
+**局部类的限制**
+
+局部类和内部类无法定义或声明任何静态成员。但是局部类可以定义常量`public static final int prop = 10`。
+
+不能在局部类里定义接口。
+
+**匿名类**
+
+匿名类和局部类一样都是在方法中声明，但是匿名类在声明的同时就实例化。匿名类没有类名，匿名类通常被当做外部类中方法的参数使用。匿名类必须`new`一个父类或者接口。
+
+```java
+import javafx.event.EventHandler;
+
+public class HelloWorld extends Application {
+    public static void main(String[] args) {
+        launch(args);
+    }
+    
+    @Override
+    public void start(Stage primaryStage) {
+        primaryStage.setTitle("Hello World!");
+        Button btn = new Button();
+        btn.setText("Say 'Hello World'");
+      	// 如果匿名类new的是父类，则必须重写父类的某些方法，如果new的是接口则必须实现接口里定义的方法
+        btn.setOnAction(new EventHandler<ActionEvent>() {
+            @Override
+            public void handle(ActionEvent event) {
+                System.out.println("Hello World!");
+            }
+        });
+    }
+}
+```
+
+
+
+### Lambda表达式
+
+lambda表达式是用来代替匿名类的语法格式。当只有一个方法的类或者只含有一个方法的接口时，可以用lambda表达式代替。lambda表达式其实是一个匿名类的实例。
+
+```java
+public class Calculator {
+  
+    interface IntegerMath {
+        int operation(int a, int b);   
+    }
+  
+    public int operateBinary(int a, int b, IntegerMath op) {
+        return op.operation(a, b);
+    }
+ 
+    public static void main(String... args) {
+    
+        Calculator myApp = new Calculator();
+        IntegerMath addition = (a, b) -> a + b;
+        IntegerMath subtraction = (a, b) -> a - b;
+        System.out.println("40 + 2 = " +
+            myApp.operateBinary(40, 2, addition));
+        System.out.println("20 - 10 = " +
+            myApp.operateBinary(20, 10, subtraction));    
+    }
+}
+```
+
+
 
 #### 抽象方法
 
@@ -171,4 +403,15 @@ class Circle extends Shape {
 ```
 
 
+
+#### 方法中的任意参数
+
+在最后一个参数的类型后加上省略号（三个点，...），然后是一个空格和参数名称。然后可以使用任意数量的该参数（包括无）调用该方法
+
+```java
+// corners是一个剩余参数数组, Point是类型
+public Polygon polygonFrom(Point... corners) { }
+
+public PrintStream printf(String format, Object... args)
+```
 
