--- a/java/基础.md
+++ b/java/基础.md
@@ -72,7 +72,13 @@ if (p instanceof Son) {
 }
 ```
 
+**类型转换小结**  
 
+1. 数值范围小的类型转换成数值范围大的类型会自动转换，范围大的转换成范围小的类型需要强制转换，强制转换的时候如果右侧的实际值大于左侧的数值范围会发生精度损失，值溢出现象，需要谨慎使用。
+2. byte、short、char类型参加数学运算时会自动将它们提升为int类型。
+3. ASCII码表 '0'的ASCII码值是48，'A'的ASCII码值是65，'a'的ASCII码值是97。
+
+  
 
 ### 位运算
 
