--- a/java/泛型.md
+++ b/java/泛型.md
@@ -58,3 +58,86 @@ public interface Comparable<T> {
 }
 ```
 
+
+
+### 通配符
+
+**无限通配符**
+
+```java
+public static void printList(List<?> list) {
+    for (Object elem: list)
+        System.out.print(elem + " ");
+    System.out.println();
+}
+
+List<Integer> li = Arrays.asList(1, 2, 3);
+List<String>  ls = Arrays.asList("one", "two", "three");
+printList(li);
+printList(ls);
+```
+
+**有限通配符** 分为上限通配符和下限通配符
+
+```java
+// 上限通配符就是传入的类型是有上限的，它必须是指定类的子类，如
+public static double sumOfList(List<? extends Number> list) {
+    double s = 0.0;
+    for (Number n : list)
+        s += n.doubleValue();
+    return s;
+}
+
+List<Integer> li = Arrays.asList(1, 2, 3); // Integer是Number类的子类
+System.out.println("sum = " + sumOfList(li));
+
+// 下限通配符就是传入的类型必须是指定类型的父类，如
+public static void addNumbers(List<? super Integer> list) {
+    for (int i = 1; i <= 10; i++) {
+        list.add(i);
+    }
+}
+
+List<Number> li = new ArrayList<>(); // Number是Integer的父类
+li.add(10);
+System.out.println("sum = " + addNumbers(li));
+```
+
+
+
+### 泛型限制
+
+1. 泛型不能修饰静态字段，如
+
+   ```java
+   public class MobileDevice<T> {
+       private static T os; // 编译报错
+   }
+   ```
+
+2. 不能使用instanceof，如
+
+   ```java
+   public static <E> void rtti(List<E> list) {
+       if (list instanceof ArrayList<Integer>) {  // compile-time error
+           // ...
+       }
+   }
+   ```
+
+3. 无法创建参数化类型数组，如
+
+   ```java
+   List <Integer> [] arrayOfLists = new List <Integer> [2]; //编译时错误
+   ```
+
+4. 泛型类不能直接或间接扩展`Throwable`类，如
+
+   ```java
+   class MathException<T> extends Exception { /* ... */ }    // compile-time error
+   
+   class QueueFullException<T> extends Throwable { /* ... */ // compile-time error
+   ```
+
+   
+
