比较大的更新

--- a/关键字/关键字.md
+++ b/关键字/关键字.md
@@ -8,7 +8,9 @@ worker
 
 `concurrently` 可以在package.json脚本命令中并行开启多个任务
 
+`framer-motion` react动画库
 
+`@emotion-core` css-in-js风格的react样式库
 
 ### 数据库
 
