--- a/docker/第一章.md
+++ b/docker/第一章.md
@@ -3,3 +3,14 @@
 //搜索stars大于100以上的redis镜像
 docker search --filter=stars=100 redis
 ```
+
+
+
+### 删除镜像
+
+> `docker rmi 镜像id`
+>
+> Notes: 如果该镜像创建过容器，则须先删除对应的容器才能成功删除镜像，否则删除镜像会报这个错误
+>
+> Error response from daemon: conflict: unable to remove repository reference "ubuntu:v1.2" (must force) - container 4006cb0a3654 is using its referenced image 9dfc8698f6f2
+
