--- a/java/代码图片.md
+++ b/java/代码图片.md
@@ -1,1 +1,12 @@
 # 代码图片笔记
+
+## 自定义全局异常
+<img width="943" alt="截屏2021-07-18 下午8 04 30" src="https://user-images.githubusercontent.com/6857151/126073529-2aab7f6e-04d8-4f94-853c-3458940082ff.png">
+
+## 自定义统一返回结果
+<img width="914" alt="截屏2021-07-18 下午8 16 36" src="https://user-images.githubusercontent.com/6857151/126073552-be8ba97c-d0dc-41f8-9216-2057345646cd.png">
+
+## 自定义返回结果枚举类
+<img width="943" alt="截屏2021-07-18 下午8 04 30" src="https://user-images.githubusercontent.com/6857151/126073621-34f611ac-f280-4c1c-b084-79d8c98182f7.png">
+
+
